# Beam

./: .gitignore  DECISIONS.md  FEATURES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.tauri/: my-app.key.pub
scripts/: sync-version.js
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discovery.rs  explorer.rs  history.rs  lib.rs  main.rs  protocol.rs  state.rs  transfer.rs  updater.rs  watch.rs
src/components/: BeamLogo.tsx  DeviceList.tsx  DeviceRadar.tsx  History.tsx  HistoryPage.tsx  IncomingPrompt.tsx  SendDropzone.tsx  Settings.tsx  SettingsPage.tsx  TransferItem.tsx  TransferList.tsx  UpdateBanner.tsx  WatchFolders.tsx  WindowControls.tsx
src/components/Explorer/: ContextMenu.tsx  FileList.tsx  Sidebar.tsx  Toolbar.tsx  index.tsx  utils.ts
src/components/ui/: button.tsx  dialog.tsx  progress.tsx  scroll-area.tsx  switch.tsx  tooltip.tsx
src/lib/: format.ts  utils.ts
