[package]
name = "beam"
version = "0.1.0"
description = "Beam — cross-platform LAN/internet file transfer"
authors = ["Beam"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it does not conflict with the
# bin name on Windows (see rust-lang/cargo#8519).
name = "beam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — `full` gives us net (TcpListener/TcpStream), fs, sync, time.
tokio = { version = "1", features = ["full"] }

# mDNS service discovery (advertise + browse `_beam._tcp`).
mdns-sd = "0.11"

# SHA-256 integrity checksums.
sha2 = "0.10"

# Stable per-transfer identifiers.
uuid = { version = "1", features = ["v4"] }

# Friendly device name default derived from the machine hostname.
hostname = "0.4"

# Ergonomic error enums for the transfer/protocol layer.
thiserror = "2"

# Lazily-initialised global state where a `OnceCell` is the simplest fit.
once_cell = "1"

# File system monitoring for watch-folder auto-send.
notify = "7"
